@@ -1,5 +1,6 @@
 
 5.2a2 -> 5.2a3:
+    - rpm.org: add %{_default_patch_flags} macro for patch options
     - proyvind: add -Werror=format-security to gcc warning flags.
     - proyvind: xzdio: rename from lzdio.
     - proyvind: lzdio: set memlimit for decoding to 100MiB.
